name:                hcached
version:             0.1.0.0
synopsis:            Network-exposed hashtable
description:         Please see README.md
homepage:            http://github.com/sulami/hcached#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
copyright:           (c) 2015 Robin Schroer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LimitedHashMap
                     , Server
  other-modules:       Paths_hcached
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , time
                     , lens
                     , unordered-containers
                     , network-simple
                     , attoparsec
  default-language:    Haskell2010

executable hcached
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hcached
                     , options
  default-language:    Haskell2010

test-suite hcached-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LimitedHashMapSpec
                     , Paths_hcached
                     , ServerSpec
  build-depends:       base
                     , hcached
                     , hspec
                     , HUnit
                     , mtl
                     , time
                     , unordered-containers
                     , lens
                     , network
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sulami/hcached
